mylang/tests/fail/f4.pas
program

function less(var i, j: int): bool
begin
    writeln(123)
end;

begin
    writeln(less(1,2))
end@


